Challenge2/2.1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {이름을 입력하세요.}
spec:
  selector:
    {레이블을 적어주세요.}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
