Challenge2/2.1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresssprint
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/override-frontend-port: "80"
spec:
  rules:
  - host: cloocus.sprint.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sprintservice
            port:
              number: 80
